@@ -897,6 +897,7 @@ public class QTestUtil {
         "-I", "at java",
         "-I", "at junit",
         "-I", "Caused by:",
+        "-I", "QUERYID_LOCK:",
         "-I", "[.][.][.] [0-9]* more",
         (new File(logDir, tname + ".out")).getPath(),
         outFileName };
